2006-06-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/aboutdialog.ccg: set_url_hook(): Pass the slot pointer instead of a 
	pointer to the slot pointer, so that this works again.

2006-06-11  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/assistant.hg: Added update_buttons_state().
	* gtk/src/button.hg: Added get/set_image_position() and property.
	* gtk/src/clipboard.ccg:
	* gtk/src/clipboard.hg: Added request_rich_text(), wait_for_rich_text(), 
	and wait_rich_text_is_available(). 
	util_convert_atoms_to_strings(): Prevent memory leak of the result of 
	gdk_atom_name().
	* gtk/src/entry.hg: Added get/set_inner_border().

2006-06-10  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/screen.hg: Added get_rgba_visual(), get_rgba_colormap().
	* pango/src/context.ccg:
	* pango/src/context.hg: Added get_matrix().
	* pango/src/renderer.ccg:
	* pango/src/renderer.hg: Added get_matrix().

2006-06-08  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/custom/custom_widget/custom_gtkrc:
	* examples/book/custom/custom_widget/mywidget.cc:
	* examples/book/custom/custom_widget/mywidget.h: Make the RC file stuff 
	work - the secret is that the style value is only available when the 
	widget has been realized. However, this only works at the moment when 
	hacking glibmm to change the gtkmm_ prefix to Gtkmm_, due to bug #343012.
	* gtk/src/notebook.ccg: set_window_creation_hook(): Adapt to the changed GTK+ C 
	API, supplying the destroy notification.
	* gtk/src/printoperation.hg: Removed set_show_dialog(), set_pdf_target(), 
	set_track_print_status(), run_async().
	Added set_export_filename(), set_track_print_status(), 
	set_show_progress(), set_allow_async(), set_custom_tab_label().
	This is to match the C API.
	* pango/src/font.ccg:
	* pango/src/font.hg: Added describe_with_absolute_size(), get_font_map(). 
	* pango/src/fontdescription.hg: Added set_absolute_size(), get_size_is_absolute().
	* pango/src/layout.hg: Added get_font_description(), index_to_line_x(). 