@@ -1,3 +1,9 @@
+2006-06-13  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* examples/book/treeview/listviewtext/examplewindow.cc:
+	* examples/book/treeview/listviewtext/examplewindow.h: fixed an
+	initialization order error when compiling with -Werror (fixes #344789)
+
 2006-06-13  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/aboutdialog.ccg: set_url_hook(): Pass the slot pointer instead of a 
